fix(mytribes): overlapping activities number fix

--- a/app/client/stylesheets/components/pu-dropdown.sass
+++ b/app/client/stylesheets/components/pu-dropdown.sass
@@ -123,6 +123,8 @@
             background-color: $color-header
             z-index: 1
 
+        .pu-dropdownitem a p
+            max-width: 215px
 
     &-notifications
         min-width: 440px - 3px
